[package]
name = "paillier"
version = "0.3.5"
edition = "2018"

[dependencies]
#rayon = "1.1"
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
#serde = { version = "1.0", features = ["derive"] }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"} 
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
num-integer = { git = "https://github.com/mesalock-linux/num-integer-sgx" }

[dependencies.curv]
#git = "https://github.com/KZen-networks/curv"
#tag = "v0.2.3"
git = "https://github.com/commerceblock/curv.git"
branch = "sgx"
features=["ec_secp256k1"]

[dev-dependencies]
bencher = "0.1"
#serde_json = "1.0"
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx", tag = "sgx_1.1.3" }
#rand = "0.6"
rand = {git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3", features=["nightly"] }

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"

[[example]]
name = "simple-voting"
